8285838: Fix for TZ environment variable DST rules